[project]
name = "hoshino-module-image-lssv"
version = "0.1.0"
description = "Image service list utilities for HoshinoBot"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "httpx>=0.28.1",
    "pillow>=9.5.0",
    "requests>=2.32.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
